Added delete user functionality
